agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Approaching rate limits
  Switch to deepseek-v4-flash for lower credit usage?

› 1. Switch to deepseek-v4-flash            Fast and affordable agentic coding
                                            model.
  2. Keep current model
  3. Keep current model (never show again)  Hide future rate limit reminders
                                            about switching models.

  Press enter to confirm or esc to go back
