agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__safety_buffering_side_conversation_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  Our systems are thinking a bit more about this request before responding.

› 1. Dismiss and keep waiting
  2. Learn more

  No action is required. Agent9527 will keep waiting, and this menu will close
  when the response is ready.
